# cuda-pi

./: .clang-format  .gitignore  CMakeLists.txt
inc/: pi_reduce.cuh
inc/pi/core/: base_method.cuh  types.cuh
inc/pi/method/agm/: gauss_legendre.cuh
inc/pi/method/quadrature/: riemann.cuh
inc/pi/method/series/: leibniz.cuh  nilakantha.cuh
inc/pi/method/stochastic/: monte_carlo.cuh
src/: main.cu  pi_reduce.cu
src/pi/core/: base_method.cu
src/pi/method/agm/: gauss_legendre.cu
src/pi/method/quadrature/: riemann.cu
src/pi/method/series/: leibniz.cu  nilakantha.cu
src/pi/method/stochastic/: monte_carlo.cu
src/pi/ops/: addition.cu  addition.cuh
